# minipad

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  kC  kiloCopy  kiloCopy.c  main.cpp  minipad  test.txt  test_opengl  todo.txt
kiloCopy.dSYM/Contents/: Info.plist
kiloCopy.dSYM/Contents/Resources/DWARF/: kiloCopy
kiloCopy.dSYM/Contents/Resources/Relocations/aarch64/: kiloCopy.yml
src/: fpscounter.cpp  globals.h  main.cpp
src/core/: editor.cpp  editor.h  piecetable.cpp  piecetable.h
src/input/file/: fileLoader.cpp  fileLoader.h
src/input/keyboard/: keyboard.cpp  keyboard.h
src/renderer/: shader.h
src/renderer/cursor/: cursor.cpp  cursor.h
src/renderer/cursor/shaders/: cursor.fs  cursor.vs
src/renderer/text/: text.cpp  text.h
src/renderer/text/shaders/: text_2d.fs  text_2d.vs
